test_regress/t/t_prop_always_nested_unsup.out
%Error-UNSUPPORTED: t/t_prop_always_nested_unsup.v:13:35: Unsupported: property/sequence operator inside bounded always (IEEE 1800-2023 16.12.11)
                                                        : ... note: In instance 't'
   13 |   assert property (@(posedge clk) always [0:3] (a |-> b));
      |                                   ^~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_prop_always_nested_unsup.v:14:35: Unsupported: property/sequence operator inside bounded always (IEEE 1800-2023 16.12.11)
                                                        : ... note: In instance 't'
   14 |   assert property (@(posedge clk) always [0:3] (a |=> b));
      |                                   ^~~~~~
%Error-UNSUPPORTED: t/t_prop_always_nested_unsup.v:17:35: Unsupported: property/sequence operator inside bounded always (IEEE 1800-2023 16.12.11)
                                                        : ... note: In instance 't'
   17 |   assert property (@(posedge clk) always [0:3] (a ##1 b));
      |                                   ^~~~~~
%Error: Exiting due to
